--- a/templates/index.html
+++ b/templates/index.html
@@ -233,6 +233,7 @@ top: -90px;
 <div class="container">
 
   <h1>AirPulse</h1>
+  <h1>Hello </h1>
   
   <h4>Air Quality Information Application by Garvit Kulshrestha</h4>
 
