--- a/templates/index.html
+++ b/templates/index.html
@@ -234,6 +234,7 @@ top: -90px;
 
   <h1>AirPulse</h1>
   <h1>Hello </h1>
+  <hello> How are you </hello>
   
   <h4>Air Quality Information Application by Garvit Kulshrestha</h4>
 
