--- a/templates/index.html
+++ b/templates/index.html
@@ -234,7 +234,8 @@ top: -90px;
 
   <h1>AirPulse</h1>
   <h1>Hello </h1>
-  <hello> How are you </hello>
+  <h1>Hello 1</h1>
+
   
   <h4>Air Quality Information Application by Garvit Kulshrestha</h4>
 
