Its just to good

--- a/templates/index.html
+++ b/templates/index.html
@@ -156,9 +156,8 @@ button[type="submit"]:hover {
 
 <div class="container">
   <h1>AirPulse</h1>
-  <h1>Hello</h1>
-  <h1>Hello 1</h1>
   <h4>Air Quality Information Application by Garvit Kulshrestha</h4>
+  <p>wow!</p>
   <hr>
   <form action="/" method="POST">
     <label for="city">Please enter your city:</label>
