--- a/templates/index.html
+++ b/templates/index.html
@@ -21,14 +21,14 @@ body {
   position: fixed;
   right: 0;
   top: 0;
-  z-index: -1;
+  z-index: -2;
 }
 
+/* Clouds */
 @keyframes animateCloud {
   0% { margin-left: -1000px; }
   100% { margin-left: 100%; }
 }
-
 .x1 { animation: animateCloud 35s linear infinite; transform: scale(0.65); }
 .x2 { animation: animateCloud 20s linear infinite; transform: scale(0.3); }
 .x3 { animation: animateCloud 30s linear infinite; transform: scale(0.5); }
@@ -62,6 +62,33 @@ body {
   height: 180px;
   right: 50px;
   top: -90px;
+}
+
+/* Wind animation */
+#wind-wrap {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: -1;
+}
+
+.wind {
+  position: absolute;
+  width: 2px;
+  height: 80px;
+  background: rgba(255,255,255,0.6);
+  border-radius: 50%;
+  animation: animateWind linear infinite;
+}
+
+@keyframes animateWind {
+  0% { transform: translateX(-50px) translateY(0) rotate(0deg); opacity: 0; }
+  10% { opacity: 1; }
+  90% { opacity: 1; }
+  100% { transform: translateX(110vw) translateY(200px) rotate(360deg); opacity: 0; }
 }
 
 /* Container */
@@ -152,6 +179,17 @@ button[type="submit"]:hover {
   <div class="x3"><div class="cloud"></div></div>
   <div class="x4"><div class="cloud"></div></div>
   <div class="x5"><div class="cloud"></div></div>
+</div>
+
+<div id="wind-wrap">
+  <!-- 20 wind streaks -->
+  <div class="wind" style="top: 20%; animation-duration: 12s;"></div>
+  <div class="wind" style="top: 40%; animation-duration: 15s;"></div>
+  <div class="wind" style="top: 60%; animation-duration: 18s;"></div>
+  <div class="wind" style="top: 80%; animation-duration: 20s;"></div>
+  <div class="wind" style="top: 30%; animation-duration: 14s;"></div>
+  <div class="wind" style="top: 50%; animation-duration: 16s;"></div>
+  <div class="wind" style="top: 70%; animation-duration: 19s;"></div>
 </div>
 
 <div class="container">
