--- a/templates/results.html
+++ b/templates/results.html
@@ -263,7 +263,7 @@ button:focus-visible {
   <h4>Air Quality Information Application by Garvit Kulshrestha</h4>
 
  
-  <h4>Hello Pratik-047 -updated now test/h4>
+  <h4>Hello Pratik-047 -updated now test 2343</h4>
   
   <hr>
 
@@ -294,7 +294,7 @@ button:focus-visible {
   </ul>
   
 {% else %}
-  <p>City Name Not Found</p>
+  <p>City Name Not Found :::::::::</p>
 {% endif %}
   
   
