--- a/templates/results.html
+++ b/templates/results.html
@@ -258,7 +258,7 @@ button:focus-visible {
 
 <div class="container">
 
-  <h1>AirPulse</h1>
+  <h1>AirPulse is working fine </h1>
   
   <h4>Air Quality Information Application by Garvit Kulshrestha</h4>
 
