--- a/templates/results.html
+++ b/templates/results.html
@@ -263,7 +263,7 @@ button:focus-visible {
   <h4>Air Quality Information Application by Garvit Kulshrestha</h4>
 
  
-  <h4>Hello Pratik-047 -updated now test 2343</h4>
+  <h4>Hello Pratik-047 how are you doing </h4>
   
   <hr>
 
